--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBMB3g1ntUFEctWuKwBOLUThIqwVEPZ4CQ"/>
+
+
+        <activity android:name=".ui.PlacesActivity"
+            android:parentActivityName=".ui.MainActivity">
+        </activity>
+        <activity android:name=".ui.RulesActivity"
+            android:parentActivityName=".ui.MainActivity">
+        </activity>
+        <activity android:name=".ui.ContactsActivity"
+            android:parentActivityName=".ui.MainActivity">
         </activity>
     </application>
 
