feat: retrieve contacts and places from database to create rule

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
 
         <activity android:name=".ui.NewContactActivity">
         </activity>
+
+        <activity android:name=".ui.NewRuleActivity">
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
