feat: send sms after departure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,6 +44,9 @@
 
         <activity android:name=".ui.NewRuleActivity">
         </activity>
+
+        <receiver android:name=".geofencing.GeofenceBroadcastReceiver" />
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
