--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,15 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
+
+    /*//gmail dependencies
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'pub.devrel:easypermissions:0.3.0'
+    implementation('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation('com.google.apis:google-api-services-<API>-<VERSION>') {
+        exclude group: 'org.apache.httpcomponents'
+    }*/
+
 }
