--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'handykey'
+            keyPassword 'stalking'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword 'stalking'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.android.handystalker"
@@ -20,49 +28,38 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        debug {
+            signingConfig signingConfigs.config
         }
     }
-
-
-
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
-    implementation ('com.google.android.gms:play-services-places:15.0.1')  {
+    implementation('com.google.android.gms:play-services-places:15.0.1') {
         exclude group: 'com.android.support'
     }
-    implementation ('com.google.android.gms:play-services-location:15.0.1') {
+    //Location
+    implementation('com.google.android.gms:play-services-location:15.0.1') {
         exclude group: 'com.android.support'
     }
-
-    implementation "com.android.support:design:27.1.1"
-
-
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    //Design
+    implementation 'com.android.support:design:27.1.1'
+    //Room and LiveData
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-
-
-    /*//gmail dependencies
-    implementation 'com.google.android.gms:play-services-auth:15.0.1'
-    implementation 'pub.devrel:easypermissions:0.3.0'
-    implementation('com.google.api-client:google-api-client-android:1.23.0') {
-        exclude group: 'org.apache.httpcomponents'
+    //Ads
+    implementation('com.google.android.gms:play-services-ads:15.0.1') {
+        exclude group: 'com.android.support'
     }
-    implementation('com.google.apis:google-api-services-<API>-<VERSION>') {
-        exclude group: 'org.apache.httpcomponents'
-    }*/
-
 }
