--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +29,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBMB3g1ntUFEctWuKwBOLUThIqwVEPZ4CQ"/>
+            android:value="@string/GOOGLE_PLACES_ANDROID_API_KEY" />
 
         <activity
             android:name=".ui.PlacesActivity"
@@ -50,7 +51,7 @@
         <activity android:name=".ui.NewHandyRuleActivity" android:parentActivityName=".ui.HandyRulesActivity"/>
 
 
-        <service android:name=".ui.StalkerService" />
+        <service android:name=".utilities.StalkerService" />
 
 
         <receiver android:name=".geofencing.GeofenceBroadcastReceiver" />
