--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,6 @@
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -46,11 +45,11 @@
             android:parentActivityName=".ui.MainActivity" />
 
         <activity
-            android:name=".ui.SmsRulesActivity"
+            android:name=".ui.TextRulesActivity"
             android:parentActivityName=".ui.RulesActivity" />
         <activity
             android:name=".ui.ContactsActivity"
-            android:parentActivityName=".ui.SmsRulesActivity" />
+            android:parentActivityName=".ui.TextRulesActivity" />
 
         <activity android:name=".ui.WifiRulesActivity"
             android:parentActivityName=".ui.RulesActivity" />
@@ -61,13 +60,13 @@
         <activity android:name=".ui.NewNotificationRuleActivity"
             android:parentActivityName=".ui.NotificationsActivity" />
 
-        <activity android:name=".ui.NewTextRuleActivity" android:parentActivityName=".ui.SmsRulesActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ui.NewTextRuleActivity" android:parentActivityName=".ui.TextRulesActivity" android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".ui.NewContactActivity" android:parentActivityName=".ui.ContactsActivity"/>
-        <activity android:name=".ui.NewRuleActivity" android:parentActivityName=".ui.SmsRulesActivity"/>
+        <activity android:name=".ui.NewRuleActivity" android:parentActivityName=".ui.TextRulesActivity"/>
         <activity android:name=".ui.NewSoundRuleActivity" android:parentActivityName=".ui.SoundRulesActivity"/>
         <activity android:name=".ui.NewWifiRuleActivity" android:parentActivityName=".ui.WifiRulesActivity"/>
-        <activity android:name=".ui.AddMessageActivity" android:parentActivityName=".ui.SmsRulesActivity"/>
+        <activity android:name=".ui.AddMessageActivity" android:parentActivityName=".ui.TextRulesActivity"/>
 
         <service android:name=".geofencing.AddingGeofencesService"/>
 
