--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation('com.google.android.gms:play-services-places:15.0.1') {
+
+    //Places SDK
+    implementation ('com.google.android.libraries.places:places:1.0.0') {
         exclude group: 'com.android.support'
     }
+
     //Location
     implementation('com.google.android.gms:play-services-location:15.0.1') {
         exclude group: 'com.android.support'
@@ -61,8 +64,5 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    //Ads
-    implementation('com.google.android.gms:play-services-ads:15.0.1') {
-        exclude group: 'com.android.support'
-    }
+
 }
