--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
-    //Places SDK
+    //Places API
     implementation ('com.google.android.libraries.places:places:1.0.0') {
+        exclude group: 'com.android.support'
+    }
+
+    implementation ('com.google.android.gms:play-services-maps:11.0.4'){
         exclude group: 'com.android.support'
     }
 
@@ -57,8 +62,10 @@ dependencies {
     implementation('com.google.android.gms:play-services-location:15.0.1') {
         exclude group: 'com.android.support'
     }
+
     //Design
     implementation 'com.android.support:design:27.1.1'
+
     //Room and LiveData
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
