--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -67,6 +68,7 @@
         <activity android:name=".ui.NewSoundRuleActivity" android:parentActivityName=".ui.SoundRulesActivity"/>
         <activity android:name=".ui.NewWifiRuleActivity" android:parentActivityName=".ui.WifiRulesActivity"/>
         <activity android:name=".ui.AddMessageActivity" android:parentActivityName=".ui.TextRulesActivity"/>
+        <activity android:name=".ui.MapsActivity" android:parentActivityName=".ui.PlacesActivity"/>
 
         <service android:name=".geofencing.AddingGeofencesService"/>
 
