--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ android {
             storePassword 'stalking'
         }
     }
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.android.handystalker"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -34,37 +34,37 @@ android {
         }
         debug {
             resValue "string", "GOOGLE_PLACES_ANDROID_API_KEY", API_KEY
-
         }
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    //imlementaion 'com.google.android.libraries.places.widget.*:places:1.0.0'
 
     //Places API
     implementation ('com.google.android.libraries.places:places:1.0.0') {
         exclude group: 'com.android.support'
     }
 
-    implementation ('com.google.android.gms:play-services-maps:11.0.4'){
+    implementation ('com.google.android.gms:play-services-maps:16.1.0'){
         exclude group: 'com.android.support'
     }
 
     //Location
-    implementation('com.google.android.gms:play-services-location:15.0.1') {
+    /*implementation('com.google.android.gms:play-services-location:16.0.0') {
         exclude group: 'com.android.support'
-    }
+    }*/
 
     //Design
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:design:28.0.0'
 
     //Room and LiveData
     implementation 'android.arch.persistence.room:runtime:1.1.1'
