--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
     <uses-feature android:name="android.hardware.location.network" />
 
 
-    
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -115,6 +117,8 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".geofencing.TimedGPSFixReceiver" />
         <service
             android:name=".utilities.GeofenceTransitionsIntentService"
             android:exported="true"
